--- a/.gitignore
+++ b/.gitignore
@@ -1,96 +1,96 @@
-# Creado por https://www.toptal.com/developers/gitignore/api/eclipse,java
-# Editar en https://www.toptal.com/developers/gitignore?templates=eclipse,java
+# Created by https://www.toptal.com/developers/gitignore/api/eclipse,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,java
 
 ### Eclipse ###
-.metadatos
-papelera/
-temporal/
+.metadata
+bin/
+tmp/
 *.tmp
 *.bak
 *.swp
 *~.nib
-propiedades locales
-.ajustes/
-.ruta de carga
-.recomendadores
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-# Constructores de herramientas externas
-.constructoresdeherramientasexternas/
+# External tool builders
+.externalToolBuilders/
 
-# "Configuraciones de lanzamiento de Eclipse" almacenadas localmente
-*.lanzamiento
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Específico de PyDev (IDE de Python para Eclipse)
-*.pydevproyecto
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
 
-# Herramientas de desarrollo específicas de CDT (C/C++)
-.cproyecto
+# CDT-specific (C/C++ Development Tooling)
+.cproject
 
-# CDT-herramientas automáticas
-.herramientas automáticas
+# CDT- autotools
+.autotools
 
-# Procesador de anotaciones de Java (APT)
-.ruta de fábrica
+# Java annotation processor (APT)
+.factorypath
 
-# Herramientas de desarrollo específicas de PDT (PHP)
-.ruta de construcción
+# PDT-specific (PHP Development Tools)
+.buildpath
 
-# complemento sbteclipse
-.objetivo
+# sbteclipse plugin
+.target
 
-# Complemento Tern
-proyecto .tern
+# Tern plugin
+.tern-project
 
-# Complemento TeXlipse
+# TeXlipse plugin
 .texlipse
 
-# STS (Conjunto de herramientas Spring)
-.frijoles de primavera
+# STS (Spring Tool Suite)
+.springBeans
 
-# Recomendadores de código
-.recomendadores/
+# Code Recommenders
+.recommenders/
 
-# Procesamiento de anotaciones
-.apt_generado/
-.apt_prueba_generada/
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
 
-# Específico de Scala IDE (desarrollo de Scala y Java para Eclipse)
-.cache-principal
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
 .scala_dependencies
-.hoja de trabajo
+.worksheet
 
-# Descomente esta línea si desea ignorar el archivo de descripción del proyecto.
-# Normalmente, este archivo se rastreará si contiene configuraciones de compilación/dependencia:
-#.proyecto
+# Uncomment this line if you wish to ignore the project description file.
+# Typically, this file would be tracked if it contains build/dependency configurations:
+*.project
 
-### Parche de Eclipse ###
-# Herramientas de arranque de primavera
+### Eclipse Patch ###
+# Spring Boot Tooling
 .sts4-cache/
 
 ### Java ###
-# Archivo de clase compilado
-*.clase
+# Compiled class file
+*.class
 
-# Archivo de registro
-*.registro
+# Log file
+*.log
 
-# Archivos BlueJ
+# BlueJ files
 *.ctxt
 
-# Herramientas móviles para Java (J2ME)
+# Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Archivos de paquete #
-*.frasco
-*.guerra
+# Package Files #
+*.jar
+*.war
 *.nar
-*.oreja
-*.cremallera
+*.ear
+*.zip
 *.tar.gz
 *.rar
 
-# registros de fallos de la máquina virtual, consulte http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-pid de reproducción*
+replay_pid*
 
-# Fin de https://www.toptal.com/developers/gitignore/api/eclipse,java
+# End of https://www.toptal.com/developers/gitignore/api/eclipse,java
